// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`shoud be able to mount any kind of node 1`] = `
<body>
  <div>
    Foo Bar
  </div>
  <div
    id="first"
  />
  <div
    id="second"
  />
  <h1>
    Foo Bar Hello World!
  </h1>
  <h1>
    Hello World!
  </h1>
  <h1>
    Lorem Ipsum!
  </h1>
  <!--comment!-->
  text!
</body>
`;

exports[`shoud be able to mount objects matching vanillapod props 1`] = `
[
  <div>
    Foo Bar
  </div>,
  <div
    id="first"
  />,
  <div
    id="second"
  />,
  <h1>
    Foo Bar Hello World!
  </h1>,
  <h1>
    Hello World!
  </h1>,
  <h1>
    Lorem Ipsum!
  </h1>,
]
`;

exports[`should mount one component correctly 1`] = `
<div>
  Foo Bar
</div>
`;
